--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,10 @@ header, footer {
     text-align: center;
 }
 
+main {
+    margin-top: 50px;
+}
+
 #word-cloud {
     height: 300px;
     width: 300px;
