--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ main {
     margin-top: 50px;
 }
 
-#word-cloud {
-    height: 300px;
-    width: 300px;
-}
+/* #word-cloud {
+    height: 520px;
+    width: 520px;
+} */
